# philips-air-purifier

./: .pylintrc  CHANGELOG.rst  LICENSE.txt  README.rst  pyproject.toml  setup.py
.circleci/: config.yml
examples/: get_and_set_data.py  get_data_when_proxy_is_set.py  get_wifi_information.py
src/philips_air_purifier/: __init__.py  _air_purifier.py  _utils.py  errors.py
src/philips_air_purifier_ac2889/: __init__.py  _air_purifier.py  _utils.py
tests/atests/: test_philips_air_purifier.py
tests/utests/: test_philips_air_purifier.py
